# stubgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/endstone_stubgen/: __init__.py
src/endstone_stubgen/extensions/: __init__.py  docstring.py  enum.py  filter.py  fixups.py  imports.py  order.py  property.py  submodule.py
src/endstone_stubgen/templates/: attribute.jinja
