[project]
name = "endstone-stubgen"
version = "0.1.0"
description = "The next-generation stub generator for pybind11 modules, built with Griffe and Jinja2"
readme = "README.md"
authors = [
    { name = "Vincent", email = "magicdroidx@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["jinja2", "griffe"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "F"]
